# src/server/controllers/movieController.ts
@@ -1,27 +1,27 @@
-import express from 'express';
+import express, { NextFunction } from 'express';
 import * as movieService from '../services/movieService';
 import { authMiddleware } from '../middleware/authMiddleware';
-import { AuthenticatedRequest } from '../../../types/movies';
+import { AuthenticatedRequest } from '../../../types/types';
+import { adminMiddleware } from '../middleware/adminMiddleware';
 
 const router = express.Router();
 
-// get All movies (50 limit)
-router.get('/', async (req, res) => {
-    const offset = req.query.page ? parseInt(req.query.page as string) : 0;
-    const movies = await movieService.retrieveAllMovies(offset);
-    res.status(200).json({status: true, movies: movies});
-});
+//DEVELOPPMENT PURPOSES ONLY
+router.get('/populate', async (_ , res) => {
+    await movieService.populateMovies()
+    res.send('Populating movies')
+})
+//---------------------------
 
 // search for movies
 router.get('/search', async (req: any, res: any) => {
-    const query = req.query.q
+    const query = req.query.q ? req.query.q : null
     const page = req.query.page ? req.query.page : 0
-     
     if (!query) {
-        res.status(400).json({status: false, message: 'Invalid search query'})
+        return res.status(400).json({status: false, message: 'Invalid search query'})
     }
     const movies = await movieService.retrieveMoviesBySearch(query, page)
-    res.status(200).json({status: true, movies: movies})
+    return res.status(200).json({status: true, movies: movies})
 }) 
 
 router.get('/reviews', async (req, res) => {
@@ -30,7 +30,7 @@ router.get('/reviews', async (req, res) => {
     try {
         movieId  = parseInt(req.query.movieId as string);
         offset = req.query.page ? parseInt(req.query.page as string) : 0;
-        const reviews = await movieService.retrieveReviews(movieId, offset)
+        const reviews = await movieService.retrieveVerifiedReviews(movieId, offset)
         res.status(200).json({status: true, reviews: reviews})
     }
     catch (e) {
@@ -39,63 +39,82 @@ router.get('/reviews', async (req, res) => {
 
 })
 
-
-// add review to movie
 router.post('/review', authMiddleware, async (req: AuthenticatedRequest, res: any) => {
-    let {movieId, review, rating} = req.body;
-    if (!movieId || !review || !rating) {
-        res.status(400).json({status: false, message: 'Invalid request body'})
-    }
-    if (rating < 0 || rating > 5) {
-        res.status(400).json({status: false, message: 'Rating must be between 0 and 5'})
-    }
     try {
-        movieId = parseInt(movieId as string)
-        const response = await movieService.addReview(movieId, review, rating, req.user)
-        res.status(200).json({status: true, response: response})
+        const { movieId, rating, review } = req.body;
+        if (!movieId || !rating || !review) {
+            return res.status(400).json({ status: false, message: 'Invalid request' });
+        }
+
+        const parsedMovieId = parseInt(movieId as string);
+        const parsedRating = parseInt(rating as string);
+        const response = await movieService.addReview(parsedMovieId, review, parsedRating, req.user);
+        res.status(200).json({ status: true, response });
     } catch (e) {
-        res.status(400).json({status: false, message: "Invalid movie id or already reviewed"})
+        res.status(500).json({ status: false, message: 'Internal server error' });
     }
-})
+});
 
-
-// update review
-router.put('/review', authMiddleware, async (req: AuthenticatedRequest, res: any) => {
-    let {movieId, review, rating} = req.body;
-    if (!movieId || !review || !rating) {
-        res.status(400).json({status: false, message: 'Invalid request body'})
-    }
-    if (rating < 0 || rating > 5) {
-        res.status(400).json({status: false, message: 'Rating must be between 0 and 5'})
-    }
+// get unverified reviews
+router.get('/reviews/unverified', authMiddleware, adminMiddleware, async (req: AuthenticatedRequest, res: any) => {
     try {
-        movieId = parseInt(movieId as string)
-        const response = await movieService.updateReview(movieId, review, rating, req.user)
-        res.status(200).json({status: true, response: response})
+        let offset: number;
+        offset = req.query.page ? parseInt(req.query.page as string) : 0;
+        const reviews = await movieService.retrieveUnverifiedReviews(offset);
+        res.status(200).json({ status: true, reviews: reviews });
     } catch (e) {
-        res.status(400).json({status: false, message: "Invalid movie id or review not found"})
+        res.status(400).json({ status: false, message: 'Invalid request' });
     }
-})
+});
 
-
-
-// get movie by id
-router.get('/:id', async (req, res) => {
+router.post('/reviews/verify', authMiddleware, adminMiddleware, async (req: AuthenticatedRequest, res: any, next: NextFunction) => {
+    let userId: number;
     let movieId: number;
-    let movie;
     try {
-        movieId = parseInt(req.params.id);
-        movie = await movieService.retrieveMovieById(movieId)
-    }catch (e) {
-        res.status(400).send({status: false, message: 'Invalid movie id'})
+        userId = parseInt(req.body.userId as string);
+        movieId = parseInt(req.body.movieId as string);
+        const response = await movieService.verifyReview(movieId, userId);
+        if (response.length === 0) {
+            return next({ status: 404, message: 'Review not found' });
+        }
+        res.status(200).json({ status: true, response: response });
+    } catch (e) {
+        res.status(400).json({ status: false, message: 'Invalid request' });
     }
-    movie ? res.status(200).json({status: true, movie: movie}) : res.status(404).json({status: false, message: 'Movie not found'})
 })
 
-//DEVELOPPMENT PURPOSES ONLY
-router.get('/populate', async (_ , res) => {
-    await movieService.populateMovies()
-    res.send('Populating movies')
-})
+router.post('/reviews/delete', authMiddleware, async (req: AuthenticatedRequest, res: any) => {
+    const { userId, movieId } = req.body;
+    if (!movieId) {
+        return res.status(400).json({ status: false, message: 'Invalid request' });
+    }
 
-export default router;
+    if (!userId && req.user.role !== 'admin') {
+        return res.status(403).json({ status: false, message: 'Forbidden, specify a userId' });
+    }
+
+    try {
+        // If the user is an admin, delete all reviews for the movie
+        if (!userId && req.user.role === 'admin') {
+            const response = await movieService.deleteMovieReviews(parseInt(movieId as string));
+            return res.status(200).json({ status: true, response });
+        }
+
+        const parsedUserId = parseInt(userId as string);
+        const parsedMovieId = parseInt(movieId as string);
+
+        if (req.user.id !== parsedUserId && req.user.role !== 'admin') {
+            return res.status(403).json({ status: false, message: 'Forbidden' });
+        }
+
+        const response = await movieService.deleteUserReview(parsedMovieId, parsedUserId);
+        if (response.length === 0) {
+            return res.status(404).json({ status: false, message: 'Review not found' });
+        }
+        res.status(200).json({ status: true, response });
+    } catch (e) {
+        res.status(500).json({ status: false, message: 'Internal server error' });
+    }
+});
+
+export default router
